--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "displayName": "Better Comment",
     "description": "Toggle block or line comments depending on cursor position",
     "icon": "icon.png",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "publisher": "Gruntfuggly",
+    "repository": "https://github.com/Gruntfuggly/bettercomment",
     "engines": {
         "vscode": "^1.5.0"
     },
