--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Better Comment",
     "description": "Toggle block or line comments depending on cursor position",
     "icon": "icon.png",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "publisher": "Gruntfuggly",
     "repository": "https://github.com/Gruntfuggly/bettercomment",
     "engines": {
@@ -30,7 +30,23 @@
                 "mac": "cmd+/",
                 "when": "editorTextFocus && !editorReadonly"
             }
-        ]
+        ],
+        "configuration": {
+            "type": "object",
+            "title": "Better Comment configuration",
+            "properties": {
+                "betterComment.forcedLineComment": {
+                    "type": "array",
+                    "description": "Glob patterns to match files that should have block comments treated as multiple line comments ",
+                    "default": [
+                        "**/*.xml",
+                        "**/*.html",
+                        "**/*.css",
+                        "**/*.md"
+                    ]
+                }
+            }
+        }
     },
     "devDependencies": {
         "typescript": "^2.0.3",
@@ -39,5 +55,10 @@
         "eslint": "^3.6.0",
         "@types/node": "^6.0.40",
         "@types/mocha": "^2.2.32"
+    },
+    "__metadata": {
+        "id": "515c294e-f858-41d3-8714-7d7242bb8d9a",
+        "publisherDisplayName": "Gruntfuggly",
+        "publisherId": "d4906d2e-f2ee-492d-9c7c-02b6160599ec"
     }
 }
