Add workspace trust flag

--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
         "*"
     ],
     "main": "./extension",
+    "capabilities": {
+        "untrustedWorkspaces": {
+            "supported": true
+        }
+    },
     "contributes": {
         "commands": [
             {
